fix navigation z-index bug

--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -1,4 +1,5 @@
 .navigation {
+  z-index: 1;
   top: 90px;
   background-color: #161616;
 }
